--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>NXVZBGB FBEN</title>
 </head>
 <body>
-    <h1>工事中</h1>
+    工事中
 </body>
 </html>
