--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>NXVZBGB FBEN</title>
 </head>
 <body>
