--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Absolute:828">
     <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/style.css">
     <title>NXVZBGB FBEN</title>
 </head>
