--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Absolute:828">
-    <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/style.css">
-    <title>NXVZBGB FBEN</title>
-</head>
-<body>
-    工事中
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Absolute:828">
+        <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/style.css">
+        <title>NXVZBGB FBEN</title>
+    </head>
+    <body>
+        <div id="container">
+            <header id="header">
+                <h1>
+                    <a href="https://NXVZBGBFBEN.github.io/index.html">
+                        <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.png" alt="NXVZBGB FBEN">
+                    </a>
+                </h1>
+                <nav id="nav">
+                    <ul>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat1</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat2</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat3</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat4</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <h2>工事中</h2>
+        </div>
+    </body>
 </html>
