[add]サイトのメイン部を作成
・ヘッダ部が一通り完成したためメイン部の作成を開始した．

--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                     </ul>
                 </nav>
             </header>
-            <h2>工事中</h2>
+            <main role="main" id="main">
+                <article id="content">
+                    工事中
+                </article>
+                <aside id="submenu">
+                    左サイドバー
+                </aside>
+                <div id="topic">
+                    右サイドバー
+                </div>
+            </main>
         </div>
     </body>
 </html>
