[add]メイン部のarticleに見出しを追加
・メイン部のarticleに見出し(自己紹介と各カテゴリへの誘導)を追加した．

--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
             </header>
             <main role="main" id="main">
                 <article id="content">
-                    工事中
+                    <header class="profile">
+                        <h2>Profile</h2>
+                        <p>工事中</p>
+                    </header>
+                    <section class="maincontents">
+                        <h4>Portfolio</h4>
+                        <p>ポートフォリオ→cat1</p>
+                    </section>
+                    <section class="maincontents">
+                        <h4>Accounts</h4>
+                        <p>アカウント集→cat2</p>
+                    </section>
+                    <section class="maincontents">
+                        <h4>Works</h4>
+                        <p>仕事→cat3</p>
+                    </section>
+                    <section class="maincontents">
+                        <h4>Hobbies</h4>
+                        <p>趣味→cat4</p>
+                    </section>
                 </article>
                 <aside id="submenu">
                     左サイドバー
