[change]グローバルナビゲーションのカテゴリ名称を変更
・グローバルナビゲーションのカテゴリ名を決定したため，catn (1≦n≦4)→新名称に変更した．

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 </h1>
                 <nav id="nav">
                     <ul>
-                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat1</a></li>
-                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat2</a></li>
-                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat3</a></li>
-                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">cat4</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
+                        <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
                     </ul>
                 </nav>
             </header>
