--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <header id="header">
                 <h1>
                     <a href="https://NXVZBGBFBEN.github.io/index.html">
-                        <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.png" alt="NXVZBGB FBEN">
+                        <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp" alt="NXVZBGB FBEN">
                     </a>
                 </h1>
                 <nav id="nav">
