[add]左サイドバーにサイトマップを追加
・articleが一通り完成したため左サイドバーにサイトマップを追加した．

--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
                     </section>
                 </article>
                 <aside id="submenu">
-                    左サイドバー
+                    <div id="sitemap">
+                        <h4>Site Map</h4>
+                        <ul class="sitemap-root">
+                            <li>
+                                NXVZBGB FBEN
+                                <ul>
+                                    <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
+                                    <li><a href="https://NXVZBGBFBEN.github.io/cat2/index.html">Accounts</a></li>
+                                    <li><a href="https://NXVZBGBFBEN.github.io/cat3/index.html">Works</a></li>
+                                    <li><a href="https://NXVZBGBFBEN.github.io/cat4/index.html">Hobbies</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </aside>
                 <div id="topic">
                     右サイドバー
