[change]サイトマップの下位にネストされている要素の左側を調整
・左側のスペースが広すぎて今後見づらくなりそうだったため1文字分に縮小した．
・list-styleをnoneに変更した．

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <ul class="sitemap-root">
                             <li>
                                 NXVZBGB FBEN
-                                <ul>
+                                <ul class="sitemap-node">
                                     <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
                                     <li><a href="https://NXVZBGBFBEN.github.io/cat2/index.html">Accounts</a></li>
                                     <li><a href="https://NXVZBGBFBEN.github.io/cat3/index.html">Works</a></li>
