[remove]mainタグからrole属性を削除
・IEが死んだのでmainタグからrole属性を削除した．

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main role="main" id="main">
+        <main id="main">
             <article id="content">
                 <header class="profile">
                     <h2>Profile</h2>
@@ -68,6 +68,9 @@
                 右サイドバー
             </div>
         </main>
+        <footer id="footer">
+
+        </footer>
     </div>
 </body>
 
