--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                     <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" />
                 </a>
-                <br>
-                この 作品 は 
+                注があるものを除いて，このサイトの内容物は
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                     クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
                 </a>
