[delete]imgタグの末尾の謎の / を削除
・きみはしにたまへ

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <footer id="footer">
             <p>
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
-                    <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" />
+                    <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png">
                 </a>
                 注があるものを除いて，このサイトの内容物は
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
