[update]文章の句読点が「。」だったため「．」に変更
・。は滅びてもろて．

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                     クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
                 </a>
-                の下に提供されています。
+                の下に提供されています．
             </p>
         </footer>
     </div>
