--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </main>
         <footer id="footer">
-            <p>
+            <div>
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                     <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png">
                 </a>
@@ -78,7 +78,7 @@
                     クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
                 </a>
                 の下に提供されています．
-            </p>
+            </div>
         </footer>
     </div>
 </body>
