--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </main>
         <footer id="footer">
-            <div>
+            <div id="cc">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                     <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png">
                 </a>
