--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header id="header">
             <h1>
                 <a href="https://NXVZBGBFBEN.github.io/index.html">
-                    <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp" alt="NXVZBGB FBEN">
+                    <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp" alt="ヘッダ画像">
                 </a>
             </h1>
             <nav id="nav">
@@ -71,7 +71,7 @@
         <footer id="footer">
             <div id="cc">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
-                    <img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png">
+                    <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0">
                 </a>
                 注があるものを除いて，このサイトの内容物は
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
