--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <footer id="footer">
             <div id="cc">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
-                    <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0">
+                    <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス">
                 </a>
                 注があるものを除いて，このサイトの内容物は
                 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
