[change]ccライセンス表示の追加説明に改行を追加
・追加説明がｶｯｺﾜﾙｲので改行した．

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                     <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス">
                 </a>
                 <p>
-                    注があるものを除いて，このサイトの内容物は
+                    注があるものを除いて，このサイトの内容物は<br>
                     <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
                         クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
-                    </a>
+                    </a><br>
                     の下に提供されています．
                 </p>
             </div>
