[change]Profile欄をWelcome!欄に変更
・Profile欄をWelcome!欄に変更した．
・ついでに適当に中身書いた．

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         </header>
         <main id="main">
             <article id="content">
-                <header class="profile">
-                    <h2>Profile</h2>
-                    <p>工事中</p>
+                <header class="Welcome">
+                    <h2>Welcome!</h2>
+                    <p>
+                        NXVZBGB FBEN のホームページです．<br>
+                        現在このサイトは工事中です．完成までお待ち下さい．
+                    </p>
                 </header>
                 <section class="maincontents">
                     <h3>Portfolio</h3>
