[change]カテゴリ説明を右サイドバーに移設
・中央に書くほどの内容でもなかったため右サイドバーにコピーした．(中央の分は削除予定)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
                 </div>
             </aside>
             <div id="topic">
-                右サイドバー
+                <section class="cat">
+                    <h4>Portfolio</h4>
+                    <p>手掛けた作品たちを紹介しています．</p>
+                </section>
+                <section class="cat">
+                    <h4>Accounts</h4>
+                    <p>各種サービスのアカウント一覧です．</p>
+                </section>
+                <section class="cat">
+                    <h4>Works</h4>
+                    <p>仕事関係のことを書いています．</p>
+                </section>
+                <section class="cat">
+                    <h4>Hobbies</h4>
+                    <p>趣味関係のことを書いています．</p>
+                </section>
             </div>
         </main>
         <footer id="footer">
