[fix]Welcome!ヘッダにcssが効いていなかった問題を修正
・Wが大文字になってたよ! ○ね!!

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main id="main">
             <article id="content">
-                <header class="Welcome">
+                <header class="welcome">
                     <h2>Welcome!</h2>
                     <p>
                         NXVZBGB FBEN のホームページです．<br>
