[revret]カテゴリ説明を中央に戻す
・各カテゴリごとに新着情報等を表示することを考えてもとに戻した．

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 </header>
                 <section class="maincontents">
                     <h3>Portfolio</h3>
-                    <p>ポートフォリオ→cat1</p>
+                    <p>手掛けた作品たちを紹介しています．</p>
                 </section>
                 <section class="maincontents">
                     <h3>Accounts</h3>
-                    <p>アカウント集→cat2</p>
+                    <p>各種サービスのアカウント一覧です．</p>
                 </section>
                 <section class="maincontents">
                     <h3>Works</h3>
-                    <p>仕事→cat3</p>
+                    <p>仕事関連のトップページです．</p>
                 </section>
                 <section class="maincontents">
                     <h3>Hobbies</h3>
-                    <p>趣味→cat4</p>
+                    <p>趣味関連のトップページです．</p>
                 </section>
             </article>
             <aside id="submenu">
