[update]Welcome!の文を更新
・4文字追加()

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>Welcome!</h2>
                     <p>
                         NXVZBGB FBEN のホームページです．<br>
-                        現在このサイトは工事中です．完成までお待ち下さい．
+                        現在このサイトは工事中です．完成までしばらくお待ち下さい．
                     </p>
                 </header>
                 <section class="maincontents">
