--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 </div>
             </aside>
             <div id="topic">
+                <section class="whatsnew">
+                    <h4>What's New</h4>
+                    <p>iframe埋め込み予定地</p>
+                </section>
             </div>
         </main>
         <footer id="footer">
