[change]グローバルナビゲーションのmargin値見直し(→mainと端を揃えた)
・2pxのｷｯｼｮｲずれを直した．

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </h1>
             <nav id="nav">
                 <ul>
-                    <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
-                    <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
-                    <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
-                    <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
+                    <li class="navl"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
+                    <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
+                    <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
+                    <li class="navr"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
                 </ul>
             </nav>
         </header>
