--- a/index.html
+++ b/index.html
@@ -9,88 +9,88 @@
 </head>
 
 <body>
-    <div id="container">
-        <header id="header">
-            <h1>
-                <a href="https://NXVZBGBFBEN.github.io/index.html">
-                    <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp" alt="ヘッダ画像">
-                </a>
-            </h1>
-            <nav id="nav">
-                <ul>
-                    <li class="navl"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
-                    <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
-                    <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
-                    <li class="navr"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main id="main">
-            <article id="content">
-                <header class="welcome">
-                    <h2>Welcome!</h2>
-                    <p>
-                        NXVZBGB FBEN のホームページです．<br>
-                        現在このサイトは工事中です．完成までしばらくお待ち下さい．
-                    </p>
-                </header>
-                <section class="maincontents">
-                    <h3>Portfolio</h3>
-                    <p>手掛けた作品たちを紹介しています．</p>
-                </section>
-                <section class="maincontents">
-                    <h3>Accounts</h3>
-                    <p>各種サービスのアカウント一覧です．</p>
-                </section>
-                <section class="maincontents">
-                    <h3>Works</h3>
-                    <p>仕事関連のトップページです．</p>
-                </section>
-                <section class="maincontents">
-                    <h3>Hobbies</h3>
-                    <p>趣味関連のトップページです．</p>
-                </section>
-            </article>
-            <aside id="submenu">
-                <div id="sitemap">
-                    <h4>Site Map</h4>
-                    <ul class="sitemap-root">
-                        <li>
-                            NXVZBGB FBEN
-                            <ul class="sitemap-node">
-                                <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
-                                <li><a href="https://NXVZBGBFBEN.github.io/cat2/index.html">Accounts</a></li>
-                                <li><a href="https://NXVZBGBFBEN.github.io/cat3/index.html">Works</a></li>
-                                <li><a href="https://NXVZBGBFBEN.github.io/cat4/index.html">Hobbies</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </aside>
-            <div id="topic">
-                <section class="whatsnew">
-                    <h4>What's New</h4>
-                    <p>iframe埋め込み予定地</p>
-                </section>
-            </div>
-        </main>
-        <footer id="footer">
-            <div id="cc">
-                <div id="ccimg">
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
-                        <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス">
-                    </a>
-                </div>
+<div id="container">
+    <header id="header">
+        <h1>
+            <a href="https://NXVZBGBFBEN.github.io/index.html">
+                <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp" alt="ヘッダ画像">
+            </a>
+        </h1>
+        <nav id="nav">
+            <ul>
+                <li class="navl"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
+                <li class="navr"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="main">
+        <article id="content">
+            <header class="welcome">
+                <h2>Welcome!</h2>
                 <p>
-                    注があるものを除いて，このサイトの内容物は<br>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">
-                        クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
-                    </a><br>
-                    の下に提供されています．
+                    NXVZBGB FBEN のホームページです．<br>
+                    現在このサイトは工事中です．完成までしばらくお待ち下さい．
                 </p>
+            </header>
+            <section class="maincontents">
+                <h3>Portfolio</h3>
+                <p>手掛けた作品たちを紹介しています．</p>
+            </section>
+            <section class="maincontents">
+                <h3>Accounts</h3>
+                <p>各種サービスのアカウント一覧です．</p>
+            </section>
+            <section class="maincontents">
+                <h3>Works</h3>
+                <p>仕事関連のトップページです．</p>
+            </section>
+            <section class="maincontents">
+                <h3>Hobbies</h3>
+                <p>趣味関連のトップページです．</p>
+            </section>
+        </article>
+        <aside id="submenu">
+            <div id="sitemap">
+                <h4>Site Map</h4>
+                <ul class="sitemap-root">
+                    <li>
+                        NXVZBGB FBEN
+                        <ul class="sitemap-node">
+                            <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/cat2/index.html">Accounts</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/cat3/index.html">Works</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/cat4/index.html">Hobbies</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-        </footer>
-    </div>
+        </aside>
+        <div id="topic">
+            <section class="whatsnew">
+                <h4>What's New</h4>
+                <p>iframe埋め込み予定地</p>
+            </section>
+        </div>
+    </main>
+    <footer id="footer">
+        <div id="cc">
+            <div id="ccimg">
+                <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">
+                    <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス">
+                </a>
+            </div>
+            <p>
+                注があるものを除いて，このサイトの内容物は<br>
+                <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">
+                    クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス
+                </a><br>
+                の下に提供されています．
+            </p>
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
