article部のpタグのmarginをいい感じ(cv:かっつー)に変更

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             </header>
             <section class="maincontents">
                 <h3>Portfolio</h3>
-                <p>手掛けた作品たちを紹介しています．</p>
+                <p>
+                    ポートフォリオ予定地です．<br>
+                    現在は工事中です．
+                </p>
             </section>
             <section class="maincontents">
                 <h3>Accounts</h3>
@@ -44,7 +47,10 @@
             </section>
             <section class="maincontents">
                 <h3>Works</h3>
-                <p>仕事関連のトップページです．</p>
+                <p>
+                    仕事関連のトップページ予定地です．<br>
+                    現在は学生なので，学校関連の情報を掲載する予定です．
+                </p>
             </section>
             <section class="maincontents">
                 <h3>Hobbies</h3>
