iframeのてすとー

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     NXVZBGB FBEN のホームページです．<br>
                     現在このサイトは工事中です．完成までしばらくお待ち下さい．
                 </p>
+                <iframe src="https://NXVZBGBFBEN.github.io/src/html/whatsnew.html"></iframe>
             </header>
             <section class="maincontents">
                 <h3>Portfolio</h3>
