--- a/src/html/whatsnew.html
+++ b/src/html/whatsnew.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="What's New">
+    <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/whatsnew-style.css">
     <title>What's New</title>
 </head>
-<body>
 
+<body>
+2022-09-17 test
 </body>
+
 </html>
