--- a/src/html/whatsnew.html
+++ b/src/html/whatsnew.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="What's New">
+    <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/whatsnew-style.css">
     <title>What's New</title>
 </head>
 
 <body>
-2022-09-17 test
+<ul>
+    <li>1970-01-01 世界が生まれる</li>
+    <li>2006-10-01 ワイ誕生</li>
+    <li>xxxx-xx-xx ??????</li>
+</ul>
 </body>
 
 </html>
