--- a/src/html/whatsnew.html
+++ b/src/html/whatsnew.html
@@ -11,7 +11,7 @@
 <body>
 <ul>
     <li>1970-01-01 世界が生まれる</li>
-    <li>2006-10-01 ワイ誕生</li>
+    <li>2006-10-01 abcdefghijklmn</li>
     <li>xxxx-xx-xx ??????</li>
 </ul>
 </body>
