--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     NXVZBGB FBEN のホームページです．<br>
                     現在このサイトは工事中です．完成までしばらくお待ち下さい．
                 </p>
+                <h3>What's New</h3>
                 <iframe src="https://NXVZBGBFBEN.github.io/src/html/whatsnew.html"></iframe>
             </header>
             <section class="maincontents">
