スクロール検証

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     現在このサイトは工事中です．完成までしばらくお待ち下さい．
                 </p>
                 <h3>What's New</h3>
-                <iframe src="https://NXVZBGBFBEN.github.io/src/html/whatsnew.html"></iframe>
+                <iframe height="" src="https://NXVZBGBFBEN.github.io/src/html/whatsnew.html"></iframe>
             </header>
             <section class="maincontents">
                 <h3>Portfolio</h3>
