--- a/src/html/whatsnew.html
+++ b/src/html/whatsnew.html
@@ -13,6 +13,15 @@
     <li>1970-01-01 世界が生まれる</li>
     <li>2006-10-01 abcdefghijklmn</li>
     <li>xxxx-xx-xx ??????</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
+    <li>xxxx-xx-xx aaa</li>
 </ul>
 </body>
 
