新着情報の日付の色を若干暗く

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
                 <iframe src="https://NXVZBGBFBEN.github.io/src/html/whatsnew.html"></iframe>
             </header>
             <section class="maincontents">
-                <h3>Portfolio</h3>
+                <h3>Portfolio (工事中)</h3>
                 <p>
                     ポートフォリオ予定地です．<br>
-                    現在は工事中です．
                 </p>
             </section>
             <section class="maincontents">
@@ -48,14 +47,14 @@
                 <p>各種サービスのアカウント一覧です．</p>
             </section>
             <section class="maincontents">
-                <h3>Works</h3>
+                <h3>Works (工事中)</h3>
                 <p>
                     仕事関連のトップページ予定地です．<br>
                     現在は学生なので，学校関連の情報を掲載する予定です．
                 </p>
             </section>
             <section class="maincontents">
-                <h3>Hobbies</h3>
+                <h3>Hobbies (工事中)</h3>
                 <p>趣味関連のトップページです．</p>
             </section>
         </article>
