--- a/src/html/whatsnew.html
+++ b/src/html/whatsnew.html
@@ -10,18 +10,7 @@
 
 <body>
 <ul>
-    <li>1970-01-01 世界が生まれる</li>
-    <li>2006-10-01 abcdefghijklmn</li>
-    <li>xxxx-xx-xx ??????</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
-    <li>xxxx-xx-xx aaa</li>
+    <li><span class="date">2022-09-19</span>  トップページ完成</li>
 </ul>
 </body>
 
