サブコンテンツ作成開始

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </h1>
         <nav id="nav">
             <ul>
-                <li class="navl"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
-                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Accounts</a></li>
-                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Works</a></li>
-                <li class="navr"><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Hobbies</a></li>
+                <li class="navl"><a href="https://NXVZBGBFBEN.github.io/portfolio/index.html">Portfolio</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/accounts/index.html">Accounts</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/works/index.html">Works</a></li>
+                <li class="navr"><a href="https://NXVZBGBFBEN.github.io/hobbies/index.html">Hobbies</a></li>
             </ul>
         </nav>
     </header>
@@ -65,10 +65,10 @@
                     <li>
                         NXVZBGB FBEN
                         <ul class="sitemap-node">
-                            <li><a href="https://NXVZBGBFBEN.github.io/cat1/index.html">Portfolio</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/cat2/index.html">Accounts</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/cat3/index.html">Works</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/cat4/index.html">Hobbies</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/portfolio/index.html">Portfolio</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/accounts/index.html">Accounts</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/works/index.html">Works</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/hobbies/index.html">Hobbies</a></li>
                         </ul>
                     </li>
                 </ul>
