--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div id="cc">
             <div id="ccimg">
                 <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">
-                    <img src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" alt="クリエイティブ・コモンズ・ライセンス">
+                    <img src="https://NXVZBGBFBEN.github.io/src/img/CC-BY-ND.svg" alt="クリエイティブ・コモンズ・ライセンス">
                 </a>
             </div>
             <p>
