とりあえず適当にバッチ貼り付け

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -27,7 +27,33 @@
     </header>
     <main id="main">
         <article id="content">
-
+            <section class="maincontents">
+                <h3>Public Accounts</h3>
+                <a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ"><img src="https://img.shields.io/badge/-Amazon-232F3E.svg?logo=amazon&style=for-the-badge" alt="Amazon"></a>
+                <a href="https://www.blogger.com/profile/02957437635231245487"><img src="https://img.shields.io/badge/-Blogger-333333.svg?logo=blogger&style=for-the-badge" alt="Blogger"></a>
+                <a href="https://bokete.jp/user/NXVZBGBFBEN"><img src="https://img.shields.io/badge/-bokete-EBBF26.svg?style=for-the-badge" alt="bokete"></a>
+                <a href="https://www.geartics.com/NXVZBGBFBEN"><img src="https://img.shields.io/badge/-Geartics-039BE5.svg?style=for-the-badge" alt="Geartics"></a>
+                <a href="https://github.com/NXVZBGBFBEN"><img src="https://img.shields.io/badge/-GitHub-181717.svg?logo=github&style=for-the-badge" alt="GitHub"></a>
+                <a href="https://www.instagram.com/nxvzbgbfben/"><img src="https://img.shields.io/badge/-Instagram-FAFAFA.svg?logo=instagram&style=for-the-badge" alt="Instagram"></a>
+                <a href="https://www.mirrativ.com/user/118409859"><img src="https://img.shields.io/badge/-Mirrativ-1DC3C0.svg?style=for-the-badge" alt="Mirrativ"></a>
+                <a href="https://typing.twi1.me/profile/userId/74143"><img src="https://img.shields.io/badge/-myTyping-F6C000.svg?style=for-the-badge" alt="myTyping"></a>
+                <a href="https://www.nicovideo.jp/user/115699530/"><img src="https://img.shields.io/badge/-niconico-252525.svg?logo=niconico&style=for-the-badge" alt="niconico"></a>
+                <a href="https://www.pixiv.net/users/71269637"><img src="https://img.shields.io/badge/-pixiv-1F1F1F.svg?logo=pixiv&style=for-the-badge" alt="pixiv"></a>
+                <a href="https://www.reddit.com/user/NXVZBGBFBEN"><img src="https://img.shields.io/badge/-Reddit-1A1A1B.svg?logo=reddit&style=for-the-badge" alt="Reddit"></a>
+                <a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq"><img src="https://img.shields.io/badge/-Spotify-000000.svg?logo=spotify&style=for-the-badge" alt="Spotify"></a>
+                <a href="https://twitter.com/NXVZBGBFBEN"><img src="https://img.shields.io/badge/-Twitter-15202B.svg?logo=twitter&style=for-the-badge" alt="Twitter"></a>
+                <a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN"><img src="https://img.shields.io/badge/-Xbox-107C10.svg?logo=xbox&style=for-the-badge" alt="Xbox"></a>
+                <a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g"><img src="https://img.shields.io/badge/-YouTube-FF0000.svg?logo=youtube&style=for-the-badge" alt="YouTube"></a>
+            </section>
+            <section class="maincontents">
+                <h3>Game IDs</h3>
+            </section>
+            <section class="maincontents">
+                <h3>Private Accounts</h3>
+                <p>
+                    ネット外でのつながりがある方にのみリンクを公開しているアカウントです．<br>
+                </p>
+            </section>
         </article>
         <aside id="submenu">
             <div id="sitemap">
