リンクを中央揃えに

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -32,63 +32,63 @@
                 <table>
                     <tbody>
                     <tr>
-                        <td><a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ" target="_blank" rel="noopener noreferrer">Amazon</a></td>
+                        <td class="table-links"><a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ" target="_blank" rel="noopener noreferrer">Amazon</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.blogger.com/profile/02957437635231245487" target="_blank" rel="noopener noreferrer">Blogger</a></td>
+                        <td class="table-links"><a href="https://www.blogger.com/profile/02957437635231245487" target="_blank" rel="noopener noreferrer">Blogger</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://bokete.jp/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">bokete</a></td>
+                        <td class="table-links"><a href="https://bokete.jp/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">bokete</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.geartics.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Geartics</a></td>
+                        <td class="table-links"><a href="https://www.geartics.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Geartics</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+                        <td class="table-links"><a href="https://github.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">GitHub</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.instagram.com/nxvzbgbfben/" target="_blank" rel="noopener noreferrer">Instagram</a></td>
+                        <td class="table-links"><a href="https://www.instagram.com/nxvzbgbfben/" target="_blank" rel="noopener noreferrer">Instagram</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.mirrativ.com/user/118409859" target="_blank" rel="noopener noreferrer">Mirrativ</a></td>
+                        <td class="table-links"><a href="https://www.mirrativ.com/user/118409859" target="_blank" rel="noopener noreferrer">Mirrativ</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://typing.twi1.me/profile/userId/74143" target="_blank" rel="noopener noreferrer">myTyping</a></td>
+                        <td class="table-links"><a href="https://typing.twi1.me/profile/userId/74143" target="_blank" rel="noopener noreferrer">myTyping</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.nicovideo.jp/user/115699530/" target="_blank" rel="noopener noreferrer">niconico</a></td>
+                        <td class="table-links"><a href="https://www.nicovideo.jp/user/115699530/" target="_blank" rel="noopener noreferrer">niconico</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.pixiv.net/users/71269637" target="_blank" rel="noopener noreferrer">pixiv</a></td>
+                        <td class="table-links"><a href="https://www.pixiv.net/users/71269637" target="_blank" rel="noopener noreferrer">pixiv</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.reddit.com/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Reddit</a></td>
+                        <td class="table-links"><a href="https://www.reddit.com/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Reddit</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq" target="_blank" rel="noopener noreferrer">Spotify</a></td>
+                        <td class="table-links"><a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq" target="_blank" rel="noopener noreferrer">Spotify</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://twitter.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Twitter</a></td>
+                        <td class="table-links"><a href="https://twitter.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Twitter</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN" target="_blank" rel="noopener noreferrer">Xbox</a></td>
+                        <td class="table-links"><a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN" target="_blank" rel="noopener noreferrer">Xbox</a></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g" target="_blank" rel="noopener noreferrer">YouTube</a></td>
+                        <td class="table-links"><a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g" target="_blank" rel="noopener noreferrer">YouTube</a></td>
                         <td></td>
                     </tr>
                     </tbody>
