アカウントの説明を追加

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -33,63 +33,63 @@
                     <tbody>
                     <tr>
                         <td class="table-links"><a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ" target="_blank" rel="noopener noreferrer">Amazon</a></td>
-                        <td></td>
+                        <td>ネット外でのつながりがある方にはほしい物リストを公開します</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.blogger.com/profile/02957437635231245487" target="_blank" rel="noopener noreferrer">Blogger</a></td>
-                        <td></td>
+                        <td>Twitterに収まりきらないような長文をつぶやきます</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://bokete.jp/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">bokete</a></td>
-                        <td></td>
+                        <td>今のところクソおもんないボケしかありません</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.geartics.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Geartics</a></td>
-                        <td></td>
+                        <td>使用しているデバイスを公開しています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://github.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-                        <td></td>
+                        <td>イカれたコミットメッセージが見どころです</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.instagram.com/nxvzbgbfben/" target="_blank" rel="noopener noreferrer">Instagram</a></td>
-                        <td></td>
+                        <td>撮影した写真を投稿しています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.mirrativ.com/user/118409859" target="_blank" rel="noopener noreferrer">Mirrativ</a></td>
-                        <td></td>
+                        <td>ゲームの無言配信を主に行っています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://typing.twi1.me/profile/userId/74143" target="_blank" rel="noopener noreferrer">myTyping</a></td>
-                        <td></td>
+                        <td>歌詞タイピングを作成しています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.nicovideo.jp/user/115699530/" target="_blank" rel="noopener noreferrer">niconico</a></td>
-                        <td></td>
+                        <td>現在は動画へのコメント投稿のみ行っています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.pixiv.net/users/71269637" target="_blank" rel="noopener noreferrer">pixiv</a></td>
-                        <td></td>
+                        <td>アイコンやヘッダ画像を投稿しています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.reddit.com/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Reddit</a></td>
-                        <td></td>
+                        <td>現在はROM専アカウントです</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq" target="_blank" rel="noopener noreferrer">Spotify</a></td>
-                        <td></td>
+                        <td>お気に入りの曲を全部突っ込んだプレイリストを公開しています</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://twitter.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Twitter</a></td>
-                        <td></td>
+                        <td>適当なことをつぶやきます</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN" target="_blank" rel="noopener noreferrer">Xbox</a></td>
-                        <td></td>
+                        <td>Minecraft用に作成したアカウントです</td>
                     </tr>
                     <tr>
                         <td class="table-links"><a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g" target="_blank" rel="noopener noreferrer">YouTube</a></td>
-                        <td></td>
+                        <td>消すに消せない黒歴史です</td>
                     </tr>
                     </tbody>
                 </table>
