--- a/accounts/index.html
+++ b/accounts/index.html
@@ -29,7 +29,7 @@
         <article id="content">
             <section class="maincontents">
                 <h3>Public Accounts</h3>
-                <table>
+                <table id="accounts">
                     <tbody>
                     <tr>
                         <td class="table-links"><a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ" target="_blank" rel="noopener noreferrer">Amazon</a></td>
