--- a/accounts/index.html
+++ b/accounts/index.html
@@ -32,64 +32,105 @@
                 <table id="accounts">
                     <tbody>
                     <tr>
-                        <td class="table-links"><a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ" target="_blank" rel="noopener noreferrer">Amazon</a></td>
+                        <td class="table-links"><a
+                                href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ"
+                                target="_blank" rel="noopener noreferrer">Amazon</a></td>
                         <td class="table-description">ネット外でのつながりがある方にはほしい物リストを公開します</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.blogger.com/profile/02957437635231245487" target="_blank" rel="noopener noreferrer">Blogger</a></td>
+                        <td class="table-links"><a href="https://www.blogger.com/profile/02957437635231245487"
+                                                   target="_blank" rel="noopener noreferrer">Blogger</a></td>
                         <td class="table-description">Twitterに収まりきらないような長文をつぶやきます</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://bokete.jp/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">bokete</a></td>
+                        <td class="table-links"><a href="https://bokete.jp/user/NXVZBGBFBEN" target="_blank"
+                                                   rel="noopener noreferrer">bokete</a></td>
                         <td class="table-description">今のところクソおもんないボケしかありません</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.geartics.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Geartics</a></td>
+                        <td class="table-links"><a href="https://discord.com/users/963412440706596925" target="_blank"
+                                                   rel="noopener noreferrer">Discord</a></td>
+                        <td class="table-description">DM用でもサーバ招待用でも</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://www.geartics.com/NXVZBGBFBEN" target="_blank"
+                                                   rel="noopener noreferrer">Geartics</a></td>
                         <td class="table-description">使用しているデバイスを公開しています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://github.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+                        <td class="table-links"><a href="https://github.com/NXVZBGBFBEN" target="_blank"
+                                                   rel="noopener noreferrer">GitHub</a></td>
                         <td class="table-description">イカれたコミットメッセージが見どころです</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.instagram.com/nxvzbgbfben/" target="_blank" rel="noopener noreferrer">Instagram</a></td>
+                        <td class="table-links"><a href="https://www.instagram.com/nxvzbgbfben/" target="_blank"
+                                                   rel="noopener noreferrer">Instagram</a></td>
                         <td class="table-description">撮影した写真を投稿しています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.mirrativ.com/user/118409859" target="_blank" rel="noopener noreferrer">Mirrativ</a></td>
+                        <td class="table-links"><a href="https://www.mirrativ.com/user/118409859" target="_blank"
+                                                   rel="noopener noreferrer">Mirrativ</a></td>
                         <td class="table-description">ゲームの無言配信を主に行っています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://typing.twi1.me/profile/userId/74143" target="_blank" rel="noopener noreferrer">myTyping</a></td>
+                        <td class="table-links"><a href="https://typing.twi1.me/profile/userId/74143" target="_blank"
+                                                   rel="noopener noreferrer">myTyping</a></td>
                         <td class="table-description">歌詞タイピングを作成しています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.nicovideo.jp/user/115699530/" target="_blank" rel="noopener noreferrer">niconico</a></td>
+                        <td class="table-links"><a href="https://www.nicovideo.jp/user/115699530/" target="_blank"
+                                                   rel="noopener noreferrer">niconico</a></td>
                         <td class="table-description">現在は動画へのコメント投稿のみ行っています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.pixiv.net/users/71269637" target="_blank" rel="noopener noreferrer">pixiv</a></td>
+                        <td class="table-links"><a href="https://www.pixiv.net/users/71269637" target="_blank"
+                                                   rel="noopener noreferrer">pixiv</a></td>
                         <td class="table-description">アイコンやヘッダ画像を投稿しています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.reddit.com/user/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Reddit</a></td>
+                        <td class="table-links"><a href="https://jp.quora.com/profile/NXVZBGB-FBEN/" target="_blank"
+                                                   rel="noopener noreferrer">Quora</a></td>
                         <td class="table-description">現在はROM専アカウントです</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq" target="_blank" rel="noopener noreferrer">Spotify</a></td>
+                        <td class="table-links"><a href="https://www.reddit.com/user/NXVZBGBFBEN" target="_blank"
+                                                   rel="noopener noreferrer">Reddit</a></td>
+                        <td class="table-description">現在はコメントのみ行っています</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://soundcloud.com/nxvzbgbfben">SoundCloud</a></td>
+                        <td class="table-description">現在はROM専アカウントです</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://open.spotify.com/user/31a4z3rsmjm7bppyun54n57ffehq"
+                                                   target="_blank" rel="noopener noreferrer">Spotify</a></td>
                         <td class="table-description">お気に入りの曲を全部突っ込んだプレイリストを公開しています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://twitter.com/NXVZBGBFBEN" target="_blank" rel="noopener noreferrer">Twitter</a></td>
+                        <td class="table-links"><a href="https://twitter.com/NXVZBGBFBEN" target="_blank"
+                                                   rel="noopener noreferrer">Twitter</a></td>
                         <td class="table-description">適当なことをつぶやきます</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN" target="_blank" rel="noopener noreferrer">Xbox</a></td>
+                        <td class="table-links"><a href="https://account.xbox.com/ja-jp/profile?gamertag=NXVZBGB%20FBEN"
+                                                   target="_blank" rel="noopener noreferrer">Xbox</a></td>
                         <td class="table-description">Minecraft用に作成したアカウントです</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g" target="_blank" rel="noopener noreferrer">YouTube</a></td>
+                        <td class="table-links"><a href="https://chiebukuro.yahoo.co.jp/user/1150185162" target="_blank"
+                                                   rel="noopener noreferrer">Yahoo!知恵袋</a></td>
+                        <td class="table-description">回答のみを行っています</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://www.youtube.com/channel/UCmjUcex8dRIy9TvjbSfFa7g"
+                                                   target="_blank" rel="noopener noreferrer">YouTube</a></td>
                         <td class="table-description">消すに消せない黒歴史です</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a
+                                href="https://kakaku.com/auth/profile/profile.aspx?NickName=NXVZBGB+FBEN"
+                                target="_blank" rel="noopener noreferrer">価格.com</a></td>
+                        <td class="table-description">製品情報の検索用です</td>
                     </tr>
                     </tbody>
                 </table>
@@ -101,7 +142,27 @@
                 <h3>Private Accounts</h3>
                 <p>
                     ネット外でのつながりがある方にのみリンクを公開しているアカウントです．<br>
+                    直接連絡を頂ければリンクを送信いたします．
                 </p>
+                <table class="accounts">
+                    <tbody>
+                    <tr>
+                        <td class="table-links"><a href="https://www.facebook.com/" target="_blank"
+                                                   rel="noopener noreferrer">Facebook</a></td>
+                        <td class="table-description">身近な内容を投稿しています</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://line.me/" target="_blank"
+                                                   rel="noopener noreferrer">LINE</a></td>
+                        <td class="table-description">日常的なチャット用です</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://linevoom.line.me/" target="_blank"
+                                                   rel="noopener noreferrer">LINE VOOM</a></td>
+                        <td class="table-description">かつてFacebookの代わりとして使用していたアカウントです</td>
+                    </tr>
+                    </tbody>
+                </table>
             </section>
         </article>
         <aside id="submenu">
