CSSはどうなってんだCSSは

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -29,7 +29,7 @@
         <article id="content">
             <section class="maincontents">
                 <h3>Public Accounts</h3>
-                <table id="accounts">
+                <table class="accounts">
                     <tbody>
                     <tr>
                         <td class="table-links"><a
