改　行　す　ん　な

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -141,8 +141,7 @@
             <section class="maincontents">
                 <h3>Private Accounts</h3>
                 <p>
-                    ネット外でのつながりがある方にのみリンクを公開しているアカウントです．<br>
-                    直接連絡を頂ければリンクを送信いたします．
+                    ネット外でのつながりがある方にのみリンクを公開しているアカウントです．DMやメールなどを用いて直接連絡を頂ければリンクを送信いたします．
                 </p>
                 <table class="accounts">
                     <tbody>
