IDを右寄せにするのはキモすぎ

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -166,7 +166,7 @@
                         <td class="table-links"><a href="https://mahjongsoul.com/"
                                                    target="_blank"
                                                    rel="noopener noreferrer">雀魂</a></td>
-                        <td class="table-description">128082949</td>
+                        <td class="table-links">128082949</td>
                         <td class="table-description">四麻メインのよわよわ雀士です</td>
                     </tr>
                     </tbody>
