--- a/accounts/index.html
+++ b/accounts/index.html
@@ -167,7 +167,7 @@
                                                    target="_blank"
                                                    rel="noopener noreferrer">雀魂</a></td>
                         <td class="table-links">128082949</td>
-                        <td class="table-description">四麻メインのよわよわ雀士です</td>
+                        <td class="table-description"><div>四麻メインのよわよわ雀士です</div></td>
                     </tr>
                     </tbody>
                 </table>
