Game IDs にAsphalt9，ウマ娘，東方ダンマクカグラを追加

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -163,11 +163,32 @@
                 <table class="accounts">
                     <tbody>
                     <tr>
+                        <td class="table-links"><a href="https://asphaltlegends.com"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">Asphalt9</a></td>
+                        <td class="table-links">スマホ版:024b65</td>
+                        <td class="table-description">Asphalt8から乗り換えました</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://umamusume.jp"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">ウマ娘</a></td>
+                        <td class="table-links">862 909 777 811</td>
+                        <td class="table-description">インストールしたものの全く触っていません</td>
+                    </tr>
+                    <tr>
                         <td class="table-links"><a href="https://mahjongsoul.com/"
                                                    target="_blank"
                                                    rel="noopener noreferrer">雀魂</a></td>
                         <td class="table-links">128082949</td>
                         <td class="table-description">四麻メインのよわよわ雀士です</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://danmaku.jp/"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">東方ダンマクカグラ</a></td>
+                        <td class="table-links">t5gTQP49</td>
+                        <td class="table-description">一応リリース日からやってます．サ終悲しい...</td>
                     </tr>
                     </tbody>
                 </table>
