index.htmlに飛ばしていたものをディレクトリに飛ばすように変更

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -14,17 +14,17 @@
 <div id="container">
     <header id="header">
         <h1>
-            <a href="https://NXVZBGBFBEN.github.io/index.html">
+            <a href="https://NXVZBGBFBEN.github.io/">
                 <img src="https://NXVZBGBFBEN.github.io/src/img/site-title.webp"
                      alt="ヘッダ画像">
             </a>
         </h1>
         <nav id="nav">
             <ul>
-                <li class="navl"><a href="https://NXVZBGBFBEN.github.io/portfolio/index.html">Portfolio</a></li>
-                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/accounts/index.html">Accounts</a></li>
-                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/works/index.html">Works</a></li>
-                <li class="navr"><a href="https://NXVZBGBFBEN.github.io/hobbies/index.html">Hobbies</a></li>
+                <li class="navl"><a href="https://NXVZBGBFBEN.github.io/portfolio/">Portfolio</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/accounts/">Accounts</a></li>
+                <li class="navc"><a href="https://NXVZBGBFBEN.github.io/works/">Works</a></li>
+                <li class="navr"><a href="https://NXVZBGBFBEN.github.io/hobbies/">Hobbies</a></li>
             </ul>
         </nav>
     </header>
@@ -229,10 +229,10 @@
                     <li>
                         NXVZBGB FBEN
                         <ul class="sitemap-node">
-                            <li><a href="https://NXVZBGBFBEN.github.io/portfolio/index.html">Portfolio</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/accounts/index.html">Accounts</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/works/index.html">Works</a></li>
-                            <li><a href="https://NXVZBGBFBEN.github.io/hobbies">Hobbies</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/portfolio/">Portfolio</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/accounts/">Accounts</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/works/">Works</a></li>
+                            <li><a href="https://NXVZBGBFBEN.github.io/hobbies/">Hobbies</a></li>
                         </ul>
                     </li>
                 </ul>
