Pinterestのアカウントを追加

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -97,6 +97,12 @@
                         <td class="table-description">現在は動画へのコメント投稿のみ行っています</td>
                     </tr>
                     <tr>
+                        <td class="table-links"><a href="https://www.pinterest.jp/NXVZBGBFBEN/"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">Pinterest</a></td>
+                        <td class="table-description">現在はROM専アカウントです</td>
+                    </tr>
+                    <tr>
                         <td class="table-links"><a href="https://www.pixiv.net/users/71269637"
                                                    target="_blank"
                                                    rel="noopener noreferrer">pixiv</a></td>
